AASES-Project/force-app/main/default/objects/QuestionPaper__c/QuestionPaper__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <label>Slot</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <label>Course Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamType__c</fullName>
        <label>Exam Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <label>Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <label>Question 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question3__c</fullName>
        <label>Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question4__c</fullName>
        <label>Question 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question5__c</fullName>
        <label>Question 5</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question6__c</fullName>
        <label>Question 6</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question7__c</fullName>
        <label>Question 7</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question8__c</fullName>
        <label>Question 8</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question9__c</fullName>
        <label>Question 9</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question10__c</fullName>
        <label>Question 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Question Paper</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Paper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Papers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>