AASES-Project/force-app/main/default/objects/QuestionPaper__c/fields/CourseCode__c.field-meta.xml
<CustomField>
    <fullName>CourseCode__c</fullName>
    <label>Course Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>