AASES-Project/force-app/main/default/objects/QuestionPaper__c/fields/Question10__c.field-meta.xml
<CustomField>
    <fullName>Question10__c</fullName>
    <label>Question 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>