AASES-Project/force-app/main/default/objects/QuestionPaper__c/fields/Question1__c.field-meta.xml
<CustomField>
    <fullName>Question1__c</fullName>
    <label>Question 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>