AASES-Project/force-app/main/default/objects/QuestionPaper__c/fields/Question2__c.field-meta.xml
<CustomField>
    <fullName>Question2__c</fullName>
    <label>Question 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>