AASES-Project/force-app/main/default/objects/QuestionPaper__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>